# maintainers-copilot

./: .env.example  .gitattributes  .gitignore  DECISIONS.md  EVALS.md  README_APPLY.md  docker-compose.yml  minio_artifacts.json  pyproject.toml
apps/api/: Dockerfile  alembic.ini  eval_thresholds.yaml  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 1f79eb0b131f_create_audit_logs_table.py  9ee5f89a4caf_add_rag_tables.py  a3b57e4d0c21_add_auth_and_widget_tables.py  b8e2d7a91c40_add_chat_tables.py  c42f6d91e8a7_add_long_term_memories.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/: deps.py
apps/api/app/infra/: config.py  database.py  embeddings.py  groq_client.py  groq_tool_client.py  minio.py  model_server_client.py  redaction.py  redis.py  security.py  vault.py
apps/api/app/models/: __init__.py  audit_log.py  chat.py  memory.py  rag.py  user.py  widget.py
apps/api/app/prompts/: chat_system.md
apps/api/app/repositories/: audit_repository.py  chat_repository.py  memory_repository.py  rag_repository.py  user_repository.py  widget_repository.py
apps/api/app/schemas/: auth.py  chat.py  memory.py  model_tools.py  rag.py  widget.py
apps/api/app/scripts/: embed_rag_chunks.py  eval_rag_retrieval.py  ingest_rag.py  upload_artifacts_to_minio.py
apps/api/app/services/: auth_service.py  chat_service.py  chat_tool_definitions.py  llm_chat_service.py  memory_service.py  rag_embedding_service.py  rag_ingestion_service.py  rag_query_rewriter.py  rag_reranker.py  rag_service.py  rag_snapshot_service.py  tool_service.py  widget_service.py
apps/api/tests/: conftest.py  test_memory_redaction.py  test_redaction.py
apps/chatbot/: .Dockerignore  (+3 more)
apps/model_server/: Dockerfile  pyproject.toml
apps/model_server/app/: main.py
apps/model_server/artifacts/: roberta_metrics.json  roberta_model_card.md  roberta_test_classification_report.txt  roberta_test_confusion_matrix.csv  roberta_wrong_predictions.csv
(+36 files in other folders)
