[project]
name = "maintainers-copilot-model-server"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "transformers>=4.44.0",
    "torch>=2.3.0",
    "sentence-transformers>=3.0.0",
    "joblib>=1.4.0",
    "mlflow>=2.14.0",
    "httpx>=0.27.0"
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0"
]